    - remove id SD_MESSAGE_SEAT_START;
    - remove id SD_MESSAGE_SEAT_STOP;
    - remove id SD_MESSAGE_SESSION_START;
    - remove id SD_MESSAGE_SESSION_STOP;
    - remove id SD_MESSAGE_SLEEP_START;
    - remove id SD_MESSAGE_SLEEP_STOP;
    - remove id SD_MESSAGE_CONFIG_ERROR;
    - remove id's SD_MESSAGE_UNIT_*;
    - remove id SD_MESSAGE_STARTUP_FINISHED;
 * coredump:
    - move coredump sysctl config to separate module journal;
    - move coredump man pages to separate module journal;
    - move coredump completions to separate module journal;
    - move systemd-coredumpctl to separate module journal;
    - move systemd-coredump to separate module journal;
    - remove support;
 * systemctl:
    - remove output argument option;
    - don't show unit logs;
    - remove libsystemd-logs library;
    - remove lines argument option;
 * remove libsystemd-logs library;
 * remove bootchart support;
 * unit:
    - don't check running state journald on unit notify;
    - remove journald socket init dependency;
 
   systemd (214.2)
~~~~~~~
 * fix quote udev rule;
 * journalctl:
    - remove qrencode support;
 * journal:
    - rename libsystemd-journal.pc to journal.pc;
    - use name journal instead of systemd in journal.pc;
    - rename libsystemd-journal.sym to journal.sym;
    - use abi prefix JOURNAL instead of LIBSYSTEMD_JOURNAL in journal.sym;
    - rename unit systemd-journald.socket to journald.socket;
    - rename unit systemd-journald.service to journald.service;
    - rename systemd-journald to journald;
    - rename system group systemd-journal to journal;
    - rename unit systemd-journal-flush.service to journal-flush.service;
    - rename library libsystemd-journal.so to journal.so;
    - rename man systemd.journal-fields to journal-fields;
    - rename kernel parameters systemd.journald.* to journald.*;
 * remove systemd-journal-remote program;
 * remove systemd-journal-gatewayd program, service and socket;
 * remove gnutls support;